# holbertonschool-hbnb

./: .flake8  .gitignore  LICENSE  README.md  app.py  classes.py  data.json  docker-compose.yml  main.py  requirements.txt  validators.py
backend/: .flake8  Dockerfile  app.py  entrypoint.sh  pyproject.toml  requirements.txt  wsgi.py
backend/API/: amenities_endpoint.py  countries_endpoint.py  reviews_endpoint.py  users_endpoint.py
backend/Model/: place.py  place_amenity.py  review.py  user.py
backend/Services/DataManipulation/: crud.py  datamanager.py
backend/Services/Initializer/: countries_initializer.py  create_app.py  define_blueprints.py  initializer.py
backend/Services/Validators/: validators.py
backend/api/: amenities_endpoint.py  auth.py  cities_endpoint.py  countries_endpoint.py  places_endpoint.py  reviews_endpoint.py  static_endpoint.py  status_endpoint.py  users_endpoint.py
backend/core/: config.py  redis_config.py
backend/migrations/: env.py
backend/migrations/versions/: f45564d813b7_add_is_verified_column_to_user_table.py
backend/model/: amenity.py  city.py  country.py  place.py  place_amenity.py  review.py  user.py
backend/services/: database.py  swagger.py
backend/services/DataManipulation/: crud.py  datamanager.py
backend/services/Database/: database.py
backend/services/Initializer/: countries_initializer.py  create_app.py  define_blueprints.py  initializer.py
backend/services/Tasks/: email_service.py
backend/services/Validators/: validators.py
backend/static/swagger/: swagger.json
backend/utils/: otp_generator.py
(+53 files in other folders)
